--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,7 +3,7 @@ ENV TZ="Europe/Tallinn"
 
 RUN mkdir /arbiter
 
-COPY ["build/libs/*", "/arbiter"]
+COPY ["build/libs/*", "/arbiter/"]
 WORKDIR /arbiter
 
 ENTRYPOINT ["java", "-jar", "arbiter-0.0.1-SNAPSHOT.jar"]
