--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,13 @@ plugins {
     id 'org.springframework.boot' version '2.4.2'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
+    id 'application'
 }
 
 group = 'ee.adamson'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '14'
+mainClassName = 'ee.adamson.arbiter.ArbiterApplication'
 
 configurations {
     compileOnly {
