--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 
+adjudicator.maxLoanAmount=10000
+adjudicator.minLoanAmount=2000
+adjudicator.minLoanPeriodInMonths=12
+adjudicator.maxLoanPeriodInMonths=60
