--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-adjudicator.maxLoanAmount=10000
-adjudicator.minLoanAmount=2000
-adjudicator.minLoanPeriodInMonths=12
-adjudicator.maxLoanPeriodInMonths=60
+arbiter.maxLoanAmount=10000
+arbiter.minLoanAmount=2000
+arbiter.minLoanPeriodInMonths=12
+arbiter.maxLoanPeriodInMonths=60
